--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&family=Roboto:wght@400;500;700&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -6,6 +8,7 @@
 
 :root {
   font-size: 62.5%; 
+  font-family: 'Montserrat', sans-serif;
 }
 
 button,
@@ -17,7 +20,7 @@ textarea {
 }
 
 body {
-  background-color: darkblue;
+  background-color: #060f27;
   font-size: 1.6em;
 }
 
@@ -29,33 +32,51 @@ body {
   flex: 1 1 100px;
 }
 
+h1 {
+  font-size: 300%;
+  color: aliceblue;
+  position: fixed;
+  left: 50px;
+  top: 20px;
+  text-shadow: 0px 0px 8px lightblue;
+
+}
+
 .background-pic {
+  height: 100%;
   width: 100%;
   position: fixed;
   transform: scaleX(-1);
 }
 
 .right-side-container {
-  background-color: #ccc;
-  opacity: 60%;
+  background: linear-gradient(90deg, hsl(225, 70%, 80%), hsl(225, 70%, 95%));
+  opacity: 80%;
   height: 100vh;
-  flex: 0 0 400px;
+  flex: 0 0 500px;
   padding: 40px 30px 10px;
 
+}
+
+h2 {
+  margin-bottom: 30px;
+  color: hsl(226, 80%, 20%);
+}
+
+.signup-section h3 {
+  margin-bottom: 20px;
+  color: hsl(226, 80%, 20%);
+}
+.signup-section h3 > span {
+  margin-left: 80px;
+  font-size: 1.2rem;
+  opacity: 0.8;
 }
 
 .signup-form {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
-}
-
-h2 {
-  margin-bottom: 30px;
-}
-
-.signup-section h3 {
-  margin-bottom: 10px;
 }
 
 form {
@@ -65,13 +86,20 @@ form {
   }
 
   & input {
-    width: 150px;
+    width: 200px;
     appearance: none;
     outline: none;
-    border-color: gray;
+    border-color: darkgray;
     border-style: solid;
     border-radius: 5px;
     border-width: 2px;
+    padding: 3px;
+  }
+
+  & li > label {
+    font-size: 1.4rem;
+    color: hsl(226, 75%, 35%);
+    font-weight: bold;
   }
 
   & input:focus, input:focus-visible,
@@ -79,8 +107,105 @@ form {
     border-color: blue;
   }
 
-  & input:invalid {
+
+  & input.input-check-visible:invalid {
     border-color: red;
+    background-color: hsla(0, 40%, 50%, 0.4);
   }
 
+  & input.input-check-visible:valid {
+    background-color: hsla(209, 40%, 50%, 0.4);
+  }
+
+  & input + span {
+    position: relative;
+  }
+  
+  & :is(input:valid,input:invalid) + span::before {
+    content: "";
+    background-image: url("../images/good-shark.png");
+    width: 20px;
+    height: 20px;
+    background-size: contain;
+    position: absolute;
+    left: -24px;
+    top: -1px;
+    visibility: hidden;
+  }
+  
+  & input:invalid + span::before{
+    background-image: url("../images/bad-shark.png");
+  }
+  
+  & input.input-check-visible + span::before {
+    visibility: visible;
+  }
+
+  & input.first-name:invalid + span::after{
+    content:"Names must be 2+ characters of only letters";
+    color: red;
+    width: 400px;
+    position: absolute;
+    left: -200px;
+    top: 26px;
+    visibility: hidden;
+  }
+
+  & input.first-name.help-text + span::after{
+    visibility: visible;
+  }
+
+}
+
+form > ul > li::first-letter {
+  font-size: 1.8rem;
+  color: hsl(226, 75%, 42%);
+}
+
+.signup-button {
+  padding: 5px 30px;
+  width: 200px;
+  margin-top: 30px;
+  border-color: blue;
+  border-radius: 5px;
+  color: aliceblue;
+  font-weight: bold; 
+  background-color: hsla(209, 100%, 40%, 1);
+  cursor: pointer;
+  box-shadow: 2px 3px 2px 0px darkblue;
+}
+
+.signup-button:active {
+  position: relative;
+  background-color: hsla(29, 100%, 50%, 1);
+  left: 2px;
+  top: 3px;
+  box-shadow: none;
+}
+
+span.password-nomatch::after {
+  content: "Passwords don't match, try again";
+  color: red;
+  position: absolute;
+  left: -200px;
+  top: 26px;
+  width: 300px;
+}
+
+.shark-selection {
+  width: 300px;
+  font-weight: bold;
+  padding: 5px 10px;
+}
+
+.source-links {
+  display: block;
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+}
+
+ul li label em {
+  text-decoration: underline;
+  font-size: 120%;
 }
