--- a/styles/style.css
+++ b/styles/style.css
@@ -102,6 +102,7 @@ form {
     font-weight: bold;
   }
 
+
   & input:focus, input:focus-visible,
   input:focus-within {
     border-color: blue;
@@ -120,7 +121,7 @@ form {
   & input + span {
     position: relative;
   }
-  
+
   & :is(input:valid,input:invalid) + span::before {
     content: "";
     background-image: url("../images/good-shark.png");
@@ -153,6 +154,13 @@ form {
 
   & input.first-name.help-text + span::after{
     visibility: visible;
+  }
+
+  & input:hover {
+    outline: blueviolet;
+    outline-style: solid;
+    outline-offset: 1px;
+    outline-width: 2px;
   }
 
 }
